Adding Server capabilities with Virtual Thread Added query parameters to call the API to calculate NLP